# government

./: .gitattributes  .gitignore  INVENTORY.md  main.py  pyproject.toml  pytest.ini  uv.toml
congress/: INVENTORY.md
epstein/scripts/: download_parallel.sh  embed_cbwwin.py  embed_cohere.py  embed_fast.py  embed_gemini.py  embed_gemini_efficient.py  embed_haystack.py  embed_parallel.py  embed_robust.py  embed_sequential.py  entity_resolution.py  generate_embeddings_ollama.py  process_full_emails.py
financial-disclosures/: INVENTORY.md  README
gov-skills/: INVENTORY.md  README.md
gov-skills/configs/: claude-desktop-mcp.json  mcp-servers.json  vscode-launch.json  vscode-tasks.json
gov-skills/docs/: source-notes.md
gov-skills/prompts/: vscode-prompts.md
gov-skills/scripts/: bootstrap_legislative_db.sql  congressgov_mcp_server.py  gov_ingest.py  govinfo_mcp_server.py
gov-skills/skills/: congressgov-ingestion-admin.md  govinfo-ingestion-admin.md
openstates-monorepo/: INVENTORY.md
politician-finance-pack/: INVENTORY.md  README.md
politician-finance-pack/configs/: docker-compose.yml  mcp-servers.json  vscode-tasks.json
politician-finance-pack/docs/: source-notes.md
politician-finance-pack/prompts/: vscode-prompts.md
politician-finance-pack/scripts/: llamaindex_pipeline.py  openfec_mcp_server.py  politician_ingest.py  politician_mcp_server.py  qdrant_sync.py
politician-finance-pack/skills/: campaign-finance-ingestion-admin.md  financial-disclosure-ingestion-admin.md  member-tracking-rag-admin.md  (+1 more)
scripts/: task_tracker.py
(+4 files in other folders)
